# roadstyle

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  release.yml  test.yml
api/: index.html
comparison/: index.html
docs/: api.md  build_gallery.py  build_maps.py  comparison.md  embedding.md  engines.md  examples.md  frontend.md  gallery.md  index.md  manual.md  palettes.md  parameters.md  roadmap.md  studio.md  themes.md  tutorial.md  usage.md  web-backend.md
docs/maps/: first_map.html  overlays.html  recolor.html
embedding/: index.html
examples/: backcompat_highsat_dark.html  index.html  overlays_web.py  recolor_custom_panel.py  recolor_web_backend.py  roads_from_duckdb.py  sodermalm_duckdb_driving.py  sundbyberg_interactive.html  sundbyberg_major_satellite.html
examples/palettes/: carto.json  highsat.json
frontend/: index.html
notebooks/: 01_quickstart.ipynb  02_data_driven_styling.ipynb  03_filtering_and_selection.ipynb  04_outputs_and_web_embedding.ipynb  05_embedding_with_roadstyle_js.ipynb  06_customizing_the_look.ipynb  07_large_data_lonboard.ipynb  08_loading_data.ipynb  09_overlays.ipynb  example_maps.ipynb  outputs_guide.ipynb
notebooks/data/: sodermalm_edges.gpkg  sundbyberg_edges.gpkg
notebooks/output/: carto_light.html  custom_palette.html  highsat_dark.html  major_satellite.html  my_custom.json
palettes/: index.html
parameters/: index.html
search/: search_index.json
src/roadstyle/: __init__.py  _settings.py  arrows.py  basemaps.py  cli.py  colors.py  config.py  controls.py  edges.py  emit.py  filters.py  interactive.py  legend.py  overlays.py  pages.py  palettes.py  render.py  render_folium.py  render_lonboard.py  render_web.py  snapshot.py  style.py  stylers.py  themes.py  tiles.py  validate.py
src/roadstyle/data/: defaults.json  style.json
src/roadstyle/data/palettes/: carto.json  highsat.json  mono.json
src/roadstyle/static/: roadstyle.css  roadstyle.js  web_template.html
src/roadstyle/studio/: __init__.py  app.py  common.py  dashboard.py  map.py
src/roadstyle/templates/: dashboard.html  report.html
tests/: test_cli.py  test_color_table.py  test_edges.py  test_emit.py  test_legend.py  test_pages.py  test_palette_io.py  test_render.py  test_render_datadriven.py  test_render_web.py  test_settings_overrides.py  test_studio_samples.py  test_style.py  test_stylers.py  test_tiles.py  test_web_smoke.py
themes/: index.html
tutorial/: index.html
ui/: README.md
ui/dashboard/: build.py  sidebar.html
ui/report/: build.py  sidebar.html
ui/studio/: app.py  common.py  dashboard.py  map.py  report.py
ui/studio/samples/: sensors.geojson  sodermalm_cycling.geojson  sodermalm_driving.geojson  zones.geojson
usage/: index.html
