[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "roadstyle"
version = "0.2.0"
description = "Opinionated OSM-theme road/edge map styling for folium, lonboard & the web (data-driven palettes, casing, themes)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kaveh" }]
keywords = [
    "openstreetmap", "osm", "roads", "cartography", "map", "visualization",
    "folium", "lonboard", "geopandas", "leaflet", "maplibre",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "geopandas",
    "shapely",
    "folium",
    "branca",
]

[project.optional-dependencies]
numeric = ["mapclassify", "matplotlib"]   # numeric/continuous styling: classification + colormaps
basemaps = ["xyzservices"]                # use any XYZ tile provider as a base map
lonboard = ["lonboard"]                   # WebGL (deck.gl) backend for very large edge sets
duckdb = ["duckdb"]                        # read edges straight from a DuckDB relation / query
arrow = ["pyarrow"]                        # read edges from a pyarrow Table
tiles = ["mapbox-vector-tile", "pmtiles"]  # tiles=True: embedded-PMTiles vector road tiles
docs = ["mkdocs-material"]
dev = ["pytest", "ruff", "mypy", "lonboard", "mapclassify", "matplotlib", "xyzservices", "duckdb", "pyarrow", "mapbox-vector-tile", "pmtiles"]

[project.scripts]
roadstyle = "roadstyle.cli:main"

[project.urls]
Homepage = "https://github.com/Khoshkhah/roadstyle"
Documentation = "https://khoshkhah.github.io/roadstyle/"
Source = "https://github.com/Khoshkhah/roadstyle"
Changelog = "https://github.com/Khoshkhah/roadstyle/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
roadstyle = [
    "py.typed", "static/*.js", "static/*.css", "static/*.html", "vendor/*.js", "vendor/*.css",
    "data/*.json", "data/palettes/*.json",   # bundled palettes + style config (see _settings.py)
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: comment/docstring overruns a few chars past 100 — tolerated house style.
# E741: `l` for a layer/line is idiomatic throughout.
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
# The annotation/deck walkers define closures that are consumed inside the same loop
# iteration (verified byte-identical output); the rule can't see that.
"src/roadstyle/render_web.py" = ["B023"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
